--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
 title: Myounghoon Jang
-author: GitHub User
-email: your-email@domain.com
+author: Myounghoon Jang
+email: stevejang29@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+
+port:             50211
+host:             0.0.0.0
 
 # social links
 twitter_username: jekyllrb
