--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: Myounghoon Jang
 author: Myounghoon Jang
 email: stevejang29@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  About Me, Projects
 
 port:             50210
 host:             0.0.0.0
