--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ port:             50210
 host:             0.0.0.0
 
 # social links
-twitter_username: jekyllrb
-github_username:  jekyll
-rss: rss
+# twitter_username: jekyllrb
+github_username:  jangjang4080
+# rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
