--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ host:             0.0.0.0
 # social links
 # twitter_username: jekyllrb
 github_username:  jangjang4080
+google_analytics: UA-126911269-4
 # rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
