--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Myounghoon Jang
 author: Myounghoon Jang
-# email: jangjang4080@gmail.com
+email: jangjang4080@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
   About Me, Projects
 
