--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ host:             0.0.0.0
 # twitter_username: jekyllrb
 github_username:  jangjang4080
 google_analytics: UA-126911269-4
+clarity: ud83bzofww
 # rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
